# rayflow

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README  README.md  rayflow.code-workspace  rayflow.conf
app/: CMakeLists.txt  dedicated_server_main.cpp  main.cpp  map_editor_main.cpp  map_editor_style.cpp  map_editor_style.hpp
client/: CMakeLists.txt  main.cpp
client/core/: config.cpp  config.hpp  game.cpp  game.hpp  logger.cpp  logger.hpp  resources.cpp  resources.hpp
client/ecs/: components.cpp  components.hpp  system.hpp
client/ecs/systems/: input_system.cpp  physics_system.cpp  physics_system.hpp  player_system.cpp  player_system.hpp  render_system.cpp  render_system.hpp
client/net/: client_session.cpp  client_session.hpp
client/renderer/: lighting_raymarch.cpp  lighting_raymarch.hpp  mesh.hpp  skybox.cpp  skybox.hpp
client/static/shaders/: shadow.fs  skybox.fs  skybox.vs  tonemap.fs  voxel.fs  voxel.vs  voxel_raymarch.fs  voxel_raymarch.vs
client/static/ui/: connect_menu.xml  hud.xml  main_menu.css  main_menu.xml  pause_menu.css
client/voxel/: block.hpp  block_interaction.cpp  block_interaction.hpp  block_model_loader.cpp  block_model_loader.hpp  block_registry.cpp  block_registry.hpp  chunk.cpp  chunk.hpp  light_volume.cpp  light_volume.hpp  texture_atlas.cpp  texture_atlas.hpp  world.cpp  world.hpp
engine/: CMakeLists.txt
engine/client/core/: config.cpp  config.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  resources.cpp  resources.hpp  window.cpp  window.hpp
engine/core/: byte_buffer.hpp  client_engine.cpp  client_engine.hpp  export.hpp  game_interface.cpp  game_interface.hpp  key_codes.hpp  logging.cpp  logging.hpp  math_types.hpp  player_constants.hpp  server_engine.cpp  server_engine.hpp  thread_pool.hpp  types.hpp
engine/core/console/: console_log_sink.cpp  console_log_sink.hpp  console_lua_state.cpp  console_lua_state.hpp  convar_registry.cpp  convar_registry.hpp
engine/core/scripting/: lua_state.cpp  lua_state.hpp  lua_state_call.hpp  sandbox.cpp  sandbox.hpp  script_api_module.hpp  script_engine_base.cpp  script_engine_base.hpp  script_types.hpp  scripting.hpp
engine/ecs/: components.cpp  components.hpp  ecs_type_registry.cpp  system.cpp  system.hpp
engine/ecs/components/: common.hpp  rendering.hpp
engine/ecs/systems/: ai_system.cpp  ai_system.hpp  camera2d_system.cpp  camera2d_system.hpp  collision2d_system.cpp  collision2d_system.hpp  input_system.cpp  input_system.hpp  particle_system.cpp  particle_system.hpp  physics2d_system.cpp  physics2d_system.hpp  physics_system.cpp  physics_system.hpp  player_system.cpp  player_system.hpp  render_system.cpp  render_system.hpp  sprite_system.cpp  sprite_system.hpp
engine/maps/: rfmap_io.cpp  rfmap_io.hpp  runtime_paths.cpp  runtime_paths.hpp
engine/renderer/: batch_2d.cpp  batch_2d.hpp  camera.cpp  camera.hpp  gl_font.cpp  gl_font.hpp  gl_framebuffer.cpp  gl_framebuffer.hpp  gl_mesh.cpp  gl_mesh.hpp  gl_render_device.cpp  gl_render_device.hpp  gl_shader.cpp  gl_shader.hpp  gl_texture.cpp  gl_texture.hpp  mesh.cpp  mesh.hpp  render_pipeline.cpp  render_pipeline.hpp  skybox.cpp  skybox.hpp  stb_impl.cpp
engine/renderer/dx11/: dx11_framebuffer.cpp  dx11_framebuffer.hpp  dx11_mesh.cpp  dx11_mesh.hpp  dx11_render_device.cpp  dx11_render_device.hpp  dx11_shader.cpp  dx11_shader.hpp  dx11_texture.cpp  dx11_texture.hpp
engine/renderer/gpu/: gpu_framebuffer.hpp  gpu_mesh.hpp  gpu_shader.hpp  gpu_texture.hpp  gpu_types.hpp  render_device.cpp  render_device.hpp
engine/renderer/shaders/: shadow.vs  tonemap.fs  tonemap.vs  voxel.fs
engine/tools/: pack_assets.cpp
engine/transport/: enet_client.cpp  enet_client.hpp  enet_common.cpp  enet_common.hpp  enet_server.cpp  enet_server.hpp  local_transport.cpp  local_transport.hpp  transport.hpp
engine/ui/debug/: console_panel.cpp  console_panel.hpp  debug_ui.cpp  debug_ui.hpp  raygui_impl.cpp
engine/ui/runtime/: ui_frame.hpp  ui_manager.cpp  ui_manager.hpp  ui_view_model.hpp  ui_view_model_base.hpp
engine/ui/scripting/: ui_script_engine.cpp  ui_script_engine.hpp
engine/vfs/: archive_reader.cpp  archive_reader.hpp  archive_writer.cpp  archive_writer.hpp  pak_format.hpp  vfs.cpp  vfs.hpp
games/: CMakeLists.txt
games/bedwars/: CMakeLists.txt  MIGRATION_PLAN.md
games/bedwars/app/: client_main.cpp  server_main.cpp
games/bedwars/client/: bedwars_client.cpp  bedwars_client.hpp
games/bedwars/examples/: server_example.cpp
games/bedwars/server/: bedwars_server.cpp  bedwars_server.hpp  physics_utils.hpp
games/bedwars/shared/: constants.hpp
games/bedwars/tools/: pack_assets.cpp
server/: CMakeLists.txt  README.md
server/core/: dedicated_server.cpp  dedicated_server.hpp  server.cpp  server.hpp
server/game/: bed.cpp  bed.hpp  game_state.cpp  game_state.hpp  generator.cpp  generator.hpp  inventory.cpp  inventory.hpp  player_state.cpp  player_state.hpp  team.cpp  team.hpp
server/scripting/: game_api.cpp  game_api.hpp  script_engine.cpp  script_engine.hpp
server/voxel/: terrain.cpp  terrain.hpp
shared/: CMakeLists.txt  README.md  constants.hpp
shared/game/: generator_types.hpp  item_types.hpp  team_types.hpp
shared/maps/: rfmap_io.cpp  rfmap_io.hpp  runtime_paths.cpp  runtime_paths.hpp
shared/protocol/: messages.hpp
shared/scripting/: lua_state.cpp  lua_state.hpp  sandbox.cpp  sandbox.hpp  script_utils.hpp
shared/transport/: endpoint.hpp  enet_client.cpp  enet_client.hpp  enet_common.cpp  enet_common.hpp  enet_connection.cpp  enet_connection.hpp  enet_server.cpp  enet_server.hpp  local_transport.cpp  local_transport.hpp
shared/vfs/: archive_reader.cpp  archive_reader.hpp  archive_writer.cpp  archive_writer.hpp  pak_format.hpp  vfs.cpp  vfs.hpp
shared/voxel/: block.hpp  block_shape.hpp  block_state.hpp
tests/: CMakeLists.txt
tests/client/net/: test_client_session.cpp
tests/helpers/: mock_endpoint.hpp  mock_terrain.hpp  test_utils.hpp
tests/integration/replication/: test_replication.cpp
tests/integration/session/: test_full_session.cpp
tools/: CMakeLists.txt  pack_assets.cpp
(+239 files in other folders)
